2014-04-03  Nathan Sidwell  <nathan@codesourcery.com>

	* doc/invoke.texi (Wnon-virtual-dtor): Adjust documentation.
	(Weffc++): Remove Scott's numbering, merge lists and reference
	Wnon-virtual-dtor.

	c-family/

	cp/
	* class.c (accessible_nvdtor_p): New.
	(check_bases): Don't check base destructor here ...
	(check_bases_and_members): ... check them here.  Trigger on
	Wnon-virtual-dtor flag.
	(finish_struct_1): Use accessible_nvdtor_p.

	testsuite/
	* g++.dg/warn/Wnvdtor.C: Add non-polymorphic case.
	* g++.dg/warn/Wnvdtor-2.C: New.
	* g++.dg/warn/Wnvdtor-3.C: New.
	* g++.dg/warn/Wnvdtor-4.C: New.
	* g++.dg/warn/Weff1.C: Delete.
	* g++.old-deja/g++.benjamin/15309-1.C: Delete.
	* g++.old-deja/g++.benjamin/15309-2.C: Delete.

2014-04-03  Nick Clifton  <nickc@redhat.com>

	* config/rl78/rl78-expand.md (movqi): Handle (SUBREG (SYMBOL_REF))
	properly.

2014-04-03  Martin Jambor  <mjambor@suse.cz>

	* ipa-cp.c (ipcp_verify_propagated_values): Also dump symtab and
	mention gcc_unreachable before failing.
	* ipa.c (symtab_remove_unreachable_nodes): Also print order of
	removed symbols.

2014-04-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60659
	* ipa-devirt.c (get_polymorphic_call_info): Do not ICE on type inconsistent
	code and instead mark the context inconsistent.
	(possible_polymorphic_call_targets): For inconsistent contexts
	return empty complete list.

2014-04-02  Anthony Green  <green@moxielogic.com>

	* config/moxie/moxie.md (zero_extendqisi2, zero_extendhisi2)
	(extendqisi2, extendhisi2): Define.
	* config/moxie/moxie.h (DEFAULT_SIGNED_CHAR): Change to 0.
	(WCHAR_TYPE): Change to unsigned int.

2014-04-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/60733
	* gimple-ssa-strength-reduction.c (ncd_with_phi): Change required
	insertion point for PHI candidates to be the end of the feeding
	block for the PHI argument.

2014-04-02  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/60650