@@ -1,3 +1,8 @@
+2014-04-03  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/60740
+	* gcc.dg/graphite/pr60740.c: New testcase.
+
 2014-04-03  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/warn/Wnvdtor.C: Add non-polymorphic case.
